--- a/ts/package.json
+++ b/ts/package.json
@@ -7,6 +7,7 @@
   "author": "bheklilr",
   "license": "Unlicense",
   "devDependencies": {
+    "@types/vorpal": "^1.11.0",
     "ts-node": "^7.0.1",
     "typescript": "3.2"
   },
@@ -14,5 +15,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node build/index.js"
+  },
+  "dependencies": {
+    "vorpal": "^1.12.0"
   }
 }
