--- a/ts/package.json
+++ b/ts/package.json
@@ -7,6 +7,7 @@
   "author": "bheklilr",
   "license": "Unlicense",
   "devDependencies": {
+    "@types/node": "^10.12.11",
     "@types/vorpal": "^1.11.0",
     "ts-node": "^7.0.1",
     "typescript": "3.2"
@@ -17,6 +18,7 @@
     "start": "node build/index.js"
   },
   "dependencies": {
+    "node": "^11.2.0",
     "vorpal": "^1.12.0"
   }
 }
