--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -2,3 +2,7 @@
 name = "aoc2018"
 version = "1.0.0"
 authors = ["Aaron Stevens <bheklilr2@gmail.com>"]
+
+[dependencies]
+clap = "2.32"
+chrono = "0.4.6"
